# eol-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  eol-cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
docs/: USAGE.md
eol-cli/: __init__.py  cli.py
eol-cli/api/: __init__.py
eol-cli/commands/: __init__.py  categories.py  identifiers.py  index.py  products.py  tags.py
eol-cli/formatters/: __init__.py
eol_cli/: __init__.py  _version.py  cli.py
eol_cli/api/: __init__.py  client.py
eol_cli/application/: __init__.py  categories.py  identifiers.py  index.py  products.py  tags.py
eol_cli/commands/: __init__.py  _errors.py  _output.py  categories.py  identifiers.py  index.py  product_lookup_output.py  product_rich_output.py  products.py  products_get.py  products_list.py  products_release.py  tags.py
eol_cli/domain/: __init__.py  contracts.py  errors.py  models.py  output.py  ports.py
eol_cli/formatters/: __init__.py  json_formatter.py  rich_common.py  rich_formatter.py  rich_lists.py  rich_products.py  rich_releases.py  sarif_formatter.py  xml_formatter.py
eol_cli/infrastructure/: __init__.py  gateways.py
eol_cli/presentation/: __init__.py  responses.py
eol_cli/utils/: __init__.py  fuzzy_search.py
tests/: __init__.py  conftest.py  test_api_client.py  test_application_use_cases.py  test_cli_commands.py  test_command_error_handling.py  test_edge_cases.py  test_formatters.py  test_fuzzy_search.py  test_output.py  test_rich_formatter_edge_cases.py  test_sarif_formatter.py
